# hera_opm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yaml  run_tests.yaml
ci/: hera_opm_publish.yml  test_environment.yml
docs/: config_files.md  makeflow_example.md  task_scripts.md
hera_op/: mf_tools.py
hera_op/data/sample_config/: nrao_rtp.cfg
hera_op/data/sample_task_scripts/: do_ANT_METRICS.sh  do_FIRSTCAL.sh  do_OMNICAL_METRICS.sh  do_XRFI_APPLY.sh
hera_op/data/test_output/: test.nrao_rtp.cfg.mf
hera_op/data/zen.2457698.40355.HH.uvcA/: history
hera_opm/: __init__.py  mf_tools.py  utils.py  version.py
hera_opm/H1C_IDR3/: idr3_1.toml
hera_opm/data/: zen.2458043.40141.xx.HH.uvh5  zen.2458043.40887.HH.uvh5  zen.2458043.41632.HH.uvh5  zen.2458044.40141.xx.HH.uvh5  zen.2458044.40886.HH.uvh5  zen.2458044.41632.xx.HH.uvh5  zen.2458045.40140.HH.uvh5  zen.2458045.40886.xx.HH.uvh5  zen.2458045.41632.xx.HH.uvh5
hera_opm/data/H1C_IDR2_task_scripts/: do_DELAY_XRFI.sh
hera_opm/tests/: __init__.py  test_lstbin_makeflow.py  test_mf_tools.py  test_utils.py
pipelines/idr2/: idr_v1.toml
scripts/: build_makeflow_from_config.py  clean_output_files.py  clean_up_makeflow.py  clean_wrapper_scripts.py  consolidate_logs.py  fix_h3c_data_file.py  idr3_run.sh  launch_screen_sessions.sh  make_idr3_makeflow.sh  make_rtp_workflow.py  makeflow_htcondor.sh  makeflow_local.sh  makeflow_nrao.sh  pipeline_status.py
(+248 files in other folders)
