[build-system]
requires = ["setuptools", "wheel", "toml>=0.9.4", "setuptools_scm[toml]>=6.2"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.setuptools_scm]
write_to = "hera_opm/_version.py"
parentdir_prefix_version = "hera_opm-"
fallback_version  = "0.0.0"
