[metadata]
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown

[options.extras_require]
test =
    hera-calibration>=3.7.5
    pytest
    pytest-cov
package =
    build

[flake8]
ignore = E501, W503, E203
docstring-convention = numpy
select = B,C,E,W,T4,B9,F,D
